--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <table>
             <tr>
                 <td>
-                    <img src="IMG-20240828-WA0054.jpg" width="430" height="400" class="img">
+                    <img src="P/IMG-20240828-WA0054.jpg" width="430" height="400" class="img">
                     <img src="..\P\IMG-20240828-WA0055.jpg" width="430" height="400" class="img">
                     <img src="..\P\IMG-20240828-WA0058.jpg" width="430" height="400" class="img">
                 </td>
