--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
                     <a href="#">Stacy's Sapphire Serenity</a>
                 </div>
                 <ul>
-                    <li><a href="..\index.html">Home</a></li>
-                    <li><a href="..\bracelets.html">Bracelet</a></li>
-                    <li><a href="..\Necklace.html">Necklace</a></li>
-                    <li><a href="..\Armlet.html">Armlet</a></li>
-                    <li><a href="..\RIngs.html">Rings</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bracelets.html">Bracelet</a></li>
+                    <li><a href="Necklace.html">Necklace</a></li>
+                    <li><a href="Armlet.html">Armlet</a></li>
+                    <li><a href="RIngs.html">Rings</a></li>
                     <li><a href="#">Contact</a></li>
                     <button><a href="#">SignIn</a></button>
                     <button><a href="#">SignUp</a></button>    
