--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <table>
             <tr>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0054.jpg" width="430" height="400" class="img">
-                    <img src="..\P\IMG-20240828-WA0055.jpg" width="430" height="400" class="img">
-                    <img src="..\P\IMG-20240828-WA0058.jpg" width="430" height="400" class="img">
+                    <img src="IMG-20240828-WA0054.jpg" width="430" height="400" class="img">
+                    <img src="IMG-20240828-WA0055.jpg" width="430" height="400" class="img">
+                    <img src="IMG-20240828-WA0058.jpg" width="430" height="400" class="img">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0043.jpg" width="430" height="400" class="img1">
-                    <img src="..\P\IMG-20240828-WA0040.jpg" width="430" height="400" class="img1">
-                    <img src="..\P\IMG-20240828-WA0039.jpg" width="430" height="400" class="img1">
+                    <img src="IMG-20240828-WA0043.jpg" width="430" height="400" class="img1">
+                    <img src="IMG-20240828-WA0040.jpg" width="430" height="400" class="img1">
+                    <img src="IMG-20240828-WA0039.jpg" width="430" height="400" class="img1">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0038.jpg" width="430" height="400" class="img2">
-                    <img src="..\P\IMG-20240828-WA0060.jpg" width="430" height="400" class="img2">
-                    <img src="..\P\IMG-20240828-WA0048.jpg" width="430" height="400" class="img2">
+                    <img src="IMG-20240828-WA0038.jpg" width="430" height="400" class="img2">
+                    <img src="IMG-20240828-WA0060.jpg" width="430" height="400" class="img2">
+                    <img src="IMG-20240828-WA0048.jpg" width="430" height="400" class="img2">
                 </td>
             </tr>
         </table>
@@ -80,19 +80,19 @@
             </tr>
             <tr>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0058.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0058.jpg" width="430" height="400">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0051.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0051.jpg" width="430" height="400">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0052.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0052.jpg" width="430" height="400">
                 </td>
             </tr>
         </table><br>
 
         <video autoplay loop muted controls width="600" height="300">
-            <source src="..\P\VID-20240828-WA0002.mp4">
+            <source src="VID-20240828-WA0002.mp4">
         </video>
         <h3><i>Love What You See? Check Out More Stunning Pieces in Our Collection!!!</i></h3>
         <br>
@@ -111,13 +111,13 @@
             </tr>
             <tr>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0053.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0053.jpg" width="430" height="400">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0050.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0050.jpg" width="430" height="400">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0046.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0046.jpg" width="430" height="400">
                 </td>
             </tr>
         </table>
@@ -139,13 +139,13 @@
             </tr>
             <tr>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0074.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0074.jpg" width="430" height="400">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0078.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0078.jpg" width="430" height="400">
                 </td>
                 <td>
-                    <img src="..\P\IMG-20240828-WA0076.jpg" width="430" height="400">
+                    <img src="IMG-20240828-WA0076.jpg" width="430" height="400">
                 </td>
             </tr>
         </table>
