--- a/Armlet.html
+++ b/Armlet.html
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0077.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0077.jpg" width="300" height="300">
                     </td>
                     <td>
                         Showcase your unique style with our Elegant Gold-Plated Armlet. This sophisticated piece features a sleek 
@@ -52,7 +52,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0076.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0076.jpg" width="300" height="300">
                     </td>
                     <td>
                         Enhance your arm with our Stunning Vintage Armlet. This exquisite piece features 
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0075.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0075.jpg" width="300" height="300">
                     </td>
                     <td>
                         Make a bold statement with our Chic Silver Armlet. This striking accessory features a 
@@ -84,7 +84,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0078.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0078.jpg" width="300" height="300">
                     </td>
                     <td>
                         Add a touch of regal charm with our Elegant Beaded Armlet. This exquisite piece features a 
@@ -100,7 +100,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0074.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0074.jpg" width="300" height="300">
                     </td>
                     <td>
                         Discover the allure of our Intricate Floral Armlet. This beautifully designed piece 
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0043.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0043.jpg" width="300" height="300">
                     </td>
                     <td>
                         Experience timeless sophistication with our Classic Cuff Armlet. This refined accessory 
@@ -132,7 +132,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0042.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0042.jpg" width="300" height="300">
                     </td>
                     <td>
                         Embrace elegance with our Delicate Diamond-Cut Armlet. This beautiful piece features a 
