--- a/Necklace.html
+++ b/Necklace.html
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0053.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0053.jpg" width="300" height="300">
                     </td>
                     <td>
                         Unveil the essence of elegance with our Graceful Diamond Necklace. This exquisite piece 
@@ -54,7 +54,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0050.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0050.jpg" width="300" height="300">
                     </td>
                     <td>
                         Elevate your ensemble with our Stunning Sapphire Pendant Necklace. This elegant piece 
@@ -70,7 +70,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0048.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0048.jpg" width="300" height="300">
                     </td>
                     <td>
                         Embrace timeless elegance with our Elegant Pearl Necklace. This classic design features a 
@@ -85,7 +85,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0046.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0046.jpg" width="300" height="300">
                     </td>
                     <td>
                         Discover the allure of our Radiant Emerald and Diamond Necklace. This exquisite piece 
@@ -100,7 +100,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0044.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0044.jpg" width="300" height="300">
                     </td>
                     <td>
                         Adorn your wrist with timeless elegance with our Elegant Silver Charm Bracelet. 
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0043.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0043.jpg" width="300" height="300">
                     </td>
                     <td>
                         Indulge in the charm of our Vintage-inspired Opal Necklace. This enchanting piece features 
@@ -131,7 +131,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0042.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0042.jpg" width="300" height="300">
                     </td>
                     <td>
                         Adorn yourself with our Elegant Infinity Necklace. This stunning piece features an 
