--- a/RIngs.html
+++ b/RIngs.html
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0055.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0055.jpg" width="300" height="300">
                     </td>
                     <td>
                         Enhance your elegance with our Classic Ruby Ring. This stunning piece features 
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0054.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0054.jpg" width="300" height="300">
                     </td>
                     <td>
                         Discover the charm of our Elegant Pearl and Diamond Ring. This sophisticated design 
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0039.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0039.jpg" width="300" height="300">
                     </td>
                     <td>
                         Experience the allure of our Modern Luxe Sapphire Ring. This stunning piece showcases a 
@@ -85,7 +85,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0060.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0060.jpg" width="300" height="300">
                     </td>
                     <td>
                         Indulge in the elegance of our Vintage Emerald Ring. This striking piece features a rich green 
@@ -101,7 +101,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0059.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0059.jpg" width="300" height="300">
                     </td>
                     <td>
                         Celebrate eternal love and commitment with our Radiant Diamond Eternity Ring. 
@@ -116,7 +116,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0043.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0043.jpg" width="300" height="300">
                     </td>
                     <td>
                         Embrace the allure of luxury with our Vintage Rose Gold Ring. This exquisite piece showcases 
@@ -131,7 +131,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0041.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0041.jpg" width="300" height="300">
                     </td>
                     <td>
                         Elevate your style with our Exquisite Diamond Solitaire Ring. This captivating piece 
