--- a/bracelets.html
+++ b/bracelets.html
@@ -38,7 +38,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0040.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0040.jpg" width="300" height="300">
                     </td>
                     <td>
                         Discover the charm of our Delicate Rose Gold Beaded Bracelet. This elegant piece features 
@@ -53,7 +53,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0045.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0045.jpg" width="300" height="300">
                     </td>
                     <td>
                         Adorn your wrist with timeless elegance with our Elegant Silver Charm Bracelet. 
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0049.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0049.jpg" width="300" height="300">
                     </td>
                     <td>
                         Celebrate timeless style with our Vintage-inspired Cuff Bracelet. This elegant piece showcases 
@@ -84,7 +84,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0047.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0047.jpg" width="300" height="300">
                     </td>
                     <td>
                         Embrace effortless elegance with our Modern Geometric Bracelet. This chic design features bold geometric 
@@ -99,7 +99,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0051.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0051.jpg" width="300" height="300">
                     </td>
                     <td>
                         Discover the allure of our Classic Charm Bracelet. Featuring an array of beautifully 
@@ -114,7 +114,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0052.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0052.jpg" width="300" height="300">
                     </td>
                     <td>
                         Add a touch of whimsy to your style with our Playful Multi-Colored Bead Bracelet. 
@@ -129,7 +129,7 @@
                 </tr>
                 <tr>
                     <td>
-                        <img src="..\P\IMG-20240828-WA0058.jpg" width="300" height="300">
+                        <img src="IMG-20240828-WA0058.jpg" width="300" height="300">
                     </td>
                     <td>
                         Elevate your style with our Elegant Crystal Bangle. This stunning bracelet features a slim, 
